--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,18 +22,20 @@
         android:layout_marginTop="20dp"
         android:textSize="15dp"
         android:textColor="#003366"
-        android:text="Email"
+        android:text="Username"
         />
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#003366"
+        android:backgroundTint="#003366"
         android:layout_marginLeft="100dp"
         android:ems="10"/>
     <TextView
         android:id="@+id/secTxt"
         android:layout_width="wrap_content"
+        android:textColor="#003366"
         android:layout_height="wrap_content"
         android:text="Password"
         android:layout_marginLeft="100dp" />
@@ -42,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
+        android:backgroundTint="#003366"
         android:inputType="textPassword"
         android:ems="10" />
     <Button
@@ -49,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
+        android:backgroundTint="#001a33"
         android:text="Login" />
     <TextView
         android:id="@+id/lnkRegister"
@@ -58,7 +62,7 @@
         android:text="Sign up"
         android:gravity="center"
         android:textSize="20dp"
-        android:textColor="#3F51B5"/>
+        android:textColor="#004f99"/>
 </LinearLayout>
 
 <!--TODO : Delete this-->
