--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="50dp"
-    android:layout_marginBottom="50dp">
+    >
     <TextView
         android:id="@+id/loginscrn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:textColor="#003366"
+        android:textColor="#001a33"
         android:text="Login"
         android:textSize="25dp"
         android:textStyle="bold"
@@ -21,8 +20,8 @@
         android:layout_marginLeft="100dp"
         android:layout_marginTop="20dp"
         android:textSize="15dp"
-        android:textColor="#003366"
-        android:text="Username"
+        android:textColor="#001a33"
+        android:text="ID"
         />
     <EditText
         android:id="@+id/txtEmail"
@@ -35,7 +34,7 @@
     <TextView
         android:id="@+id/secTxt"
         android:layout_width="wrap_content"
-        android:textColor="#003366"
+        android:textColor="#001a33"
         android:layout_height="wrap_content"
         android:text="Password"
         android:layout_marginLeft="100dp" />
