--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,42 +8,77 @@
     tools:context=".Home">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tbHome"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tbHome">
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnProfile"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/black_shade_1"
+            app:icon="@drawable/profile" />
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="match_parent"
+
+
+            <Button
+                android:id="@+id/btnTitle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Fans Club"
-                android:textColor="@color/yellow"
-                android:textAlignment="center"
+                android:backgroundTint="@color/black_shade_1"
                 android:gravity="center"
-                android:padding="40dp"
-                android:layout_marginEnd="15dp"
-                android:textStyle="bold"/>
+                android:padding="20dp"
+                android:text="VivaLaFC"
+                android:textAlignment="center"
+                android:textColor="@color/yellow"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+
         </RelativeLayout>
+
+        <Button
+            android:id="@+id/btnReport"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:backgroundTint="@color/black_shade_1"
+            app:icon="@drawable/warning"
+            style="?android:attr/borderlessButtonStyle"/>
+
 
     </androidx.appcompat.widget.Toolbar>
 
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCategories"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tbHome"
+        android:layout_marginTop="0dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/categories_rv_item" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvNews"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rvNews"
-        android:orientation="horizontal"
-        android:layout_below="@+id/tbHome"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:layout_below="@+id/rvCategories"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/news_rv_item" />
 
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
 </RelativeLayout>
