--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,140 +2,176 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/loginscrn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="80dp"
-        android:text="Registration"
-        android:textColor="#001a33"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+    <ScrollView
+        android:id="@+id/svLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/txtUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="20dp"
-        android:text="Username"
-        android:textColor="#001a33" />
-
-    <EditText
-        android:id="@+id/editUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:backgroundTint="#003366"
-        android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/txtID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:text="ID"
-        android:textColor="#001a33" />
-
-    <EditText
-        android:id="@+id/editID"
-        android:inputType="number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:backgroundTint="#003366"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/secTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:text="Email"
-        android:textColor="#001a33" />
-
-    <EditText
-        android:id="@+id/txtEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:backgroundTint="#003366"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
-
-    <TextView
-        android:id="@+id/thirdTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:text="Password"
-        android:textColor="#001a33" />
-
-    <EditText
-        android:id="@+id/txtPwd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:backgroundTint="#003366"
-        android:ems="10"
-        android:inputType="textPassword" />
-
-    <TextView
-        android:id="@+id/txtJenisKelamin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:text="Jenis Kelamin"
-        android:textColor="#001a33" />
-
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginEnd="55dp">
-
-        <RadioButton
-            android:id="@+id/rbJenisKelaminP"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Perempuan"
-            android:textColor="#003366" />
-
-        <RadioButton
-            android:id="@+id/rbJenisKelaminL"
+        <LinearLayout
+            android:id="@+id/llContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Laki - Laki"
-            android:textColor="#003366" />
-    </RadioGroup>
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:backgroundTint="#001a33"
-        android:text="Create" />
+            <TextView
+                android:id="@+id/tvRegistrationTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="80dp"
+                android:text="Registration"
+                android:textColor="#001a33"
+                android:textSize="25dp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/lnkLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:gravity="center"
-        android:onClick="test"
-        android:text="Login"
-        android:textColor="#004f99"
-        android:textSize="20dp" />
+            <TextView
+                android:id="@+id/txtUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="20dp"
+                android:text="Username"
+                android:textColor="#001a33" />
 
-    <EditText
-        android:id="@+id/editTextTextEmailAddress2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
+            <EditText
+                android:id="@+id/editUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:backgroundTint="#003366"
+                android:textColor="#003366"
+                android:hint="a-z, 0-9"
+                android:ems="10" />
+
+            <TextView
+                android:id="@+id/txtID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:text="ID"
+                android:textColor="#001a33" />
+
+            <EditText
+                android:id="@+id/editID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:backgroundTint="#003366"
+                android:textColor="#003366"
+                android:ems="10"
+                android:hint="numbers only"
+                android:inputType="number" />
+
+            <TextView
+                android:id="@+id/txtEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:text="Email"
+                android:textColor="#001a33" />
+
+            <EditText
+                android:id="@+id/editEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:backgroundTint="#003366"
+                android:textColor="#003366"
+                android:ems="10"
+                android:hint="example@email.com"
+                android:inputType="textEmailAddress" />
+
+            <TextView
+                android:id="@+id/txtPwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:text="Password"
+                android:textColor="#001a33" />
+
+            <EditText
+                android:id="@+id/editPwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:textColor="#003366"
+                android:backgroundTint="#003366"
+                android:ems="10"
+                android:inputType="textPassword" />
+            <TextView
+                android:id="@+id/txtRePwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:text="Confirm Password"
+                android:textColor="#001a33" />
+
+            <EditText
+                android:id="@+id/editRePwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:textColor="#003366"
+                android:backgroundTint="#003366"
+                android:ems="10"
+                android:inputType="textPassword" />
+
+            <TextView
+                android:id="@+id/txtJenisKelamin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:text="Jenis Kelamin"
+                android:textColor="#001a33" />
+
+            <RadioGroup
+                android:id="@+id/rgJenisKelamin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="55dp">
+
+                <RadioButton
+                    android:id="@+id/rbJenisKelaminP"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Perempuan"
+                    android:textColor="#003366" />
+
+                <RadioButton
+                    android:id="@+id/rbJenisKelaminL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Laki - Laki"
+                    android:textColor="#003366" />
+            </RadioGroup>
+
+            <Button
+                android:id="@+id/btnCreate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:backgroundTint="#001a33"
+                android:textColor="@color/white"
+                android:text="Create" />
+
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_width="95dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:textSize="10dp"
+                android:text="Login"
+                android:textColor="#003366"
+                android:backgroundTint="@color/white"
+                />
+
+
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
