--- a/app/src/main/res/drawable-anydpi/warning.xml
+++ b/app/src/main/res/drawable-anydpi/warning.xml
@@ -3,14 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF"
-    android:alpha="0.8">
-  <group android:scaleX="1.25"
-      android:scaleY="1.25"
-      android:translateX="-3"
-      android:translateY="-3">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M1,21h22L12,2 1,21zM13,18h-2v-2h2v2zM13,14h-2v-4h2v4z"/>
-  </group>
+    android:tint="#333333"
+    android:alpha="0.6">
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M1,21h22L12,2 1,21zM13,18h-2v-2h2v2zM13,14h-2v-4h2v4z"/>
 </vector>
