--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -28,7 +28,7 @@
         android:textColor="@color/white"
         android:layout_weight="1"
         android:ems="10"
-        android:text="VivalaFC merupakan portal berita yang terdaftar dan sudah diverifikasi di Dewan Pers Indonesia. Informasi terbaru dan akurat yang disajikan seputar bola menitikberatkan pada akurasi dan ketajaman berita dengan sumber informasi yang terpercaya.
+        android:text="VivaLaFC merupakan portal berita yang terdaftar dan sudah diverifikasi di Dewan Pers Indonesia. Informasi terbaru dan akurat yang disajikan seputar bola menitikberatkan pada akurasi dan ketajaman berita dengan sumber informasi yang terpercaya.
 
 VivaLaFC tidak bekerja untuk kepentingan politik mana pun dan berdiri di atas dan untuk semua golongan, serta non-partisan.
 
